// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden server sites: cappedPartner > derives the cached money columns (recomputeDealMoney, dealMoneyColumns) 1`] = `
{
  "columns": {
    "adderTotalCents": 0,
    "contractPriceCents": 29589429,
    "dealerFeePct": 65,
    "grossPpwCents": 550,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 700000,
    "stickerPricePerBatteryCents": 0,
  },
  "recompute": {
    "changed": true,
  },
  "rowAfterRecompute": {
    "adderTotalCents": 0,
    "contractPriceCents": 29589429,
    "dealerFeePct": 65,
    "grossPpwCents": 550,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 700000,
    "stickerPricePerBatteryCents": 0,
  },
}
`;

exports[`golden server sites: cappedPartner > estimates and pays the rep (estimatedSolarCommission, computeSolarCommissionsForProject) 1`] = `
{
  "created": 1,
  "estimate": {
    "basis": "per_watt",
    "fromSnapshot": false,
    "grossCents": 191400,
    "netCents": 191400,
    "state": "estimate",
  },
  "line": {
    "amount": 191400,
    "baseAmount": 12760,
    "label": "Solar per-watt ($0.15/W · 12,760 W)",
    "solarBasis": "per_watt",
    "solarGrossAmount": 191400,
  },
  "refusals": [],
}
`;

exports[`golden server sites: cappedPartner > generates the document and stamps what reads it (generateProposalVersion, restampLeadValue, solarContractByLead) 1`] = `
{
  "leadValueCents": 10712600,
  "options": [
    {
      "adderLinesFinal": [
        [
          "Re-roof",
          2000000,
        ],
      ],
      "addersFinalCents": 2000000,
      "baseFinalCents": 7018000,
      "creditAmountCents": 8876829,
      "credits": [
        [
          "itc",
          30,
          8876829,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 20571429,
      "finalCents": 29589429,
      "finalPpwCents": 2319,
      "financedCents": 29589429,
      "financedCreditsAppliedCents": 10712600,
      "key": "quoted:loan",
      "label": "Capped Partner · 30 Year Solar",
      "monthlyCents": 82193,
      "monthlyCreditsAppliedCents": 29757,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 10712600,
      "paydownCents": null,
      "postSolarMonthlyCents": 1345,
      "product": "loan",
      "programmeLabel": "30 Year Solar",
      "quoted": true,
      "savings": {
        "netCents": -17880806,
        "paidCents": 29589480,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": 996154,
        "paidCents": 10712520,
        "paybackYear": 25,
      },
      "signTodayCents": 10000000,
      "stickerPpwCents": 550,
      "totalCreditsAppliedCents": 29589429,
    },
    {
      "adderLinesFinal": [
        [
          "Re-roof",
          700000,
        ],
      ],
      "addersFinalCents": 700000,
      "baseFinalCents": 2462680,
      "creditAmountCents": 3108804,
      "credits": [
        [
          "itc",
          30,
          3108804,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 7200000,
      "finalCents": 10362680,
      "finalPpwCents": 812,
      "financedCents": 10362680,
      "financedCreditsAppliedCents": 7253876,
      "key": "cash",
      "label": "Pay in full",
      "monthlyCents": null,
      "monthlyCreditsAppliedCents": null,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 7253876,
      "paydownCents": null,
      "postSolarMonthlyCents": 1345,
      "product": "cash",
      "programmeLabel": null,
      "quoted": false,
      "savings": {
        "netCents": -1377368,
        "paidCents": 10362680,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": 1731436,
        "paidCents": 10362680,
        "paybackYear": 22,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 193,
      "totalCreditsAppliedCents": 10362680,
    },
    {
      "adderLinesFinal": [
        [
          "Re-roof",
          933333,
        ],
      ],
      "addersFinalCents": 933333,
      "baseFinalCents": 4466000,
      "creditAmountCents": 4499800,
      "credits": [
        [
          "itc",
          30,
          4499800,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 9600000,
      "finalCents": 14999333,
      "finalPpwCents": 1175,
      "financedCents": 14999333,
      "financedCreditsAppliedCents": 10499533,
      "key": "loan:<id>",
      "label": "Example Lender · 25 yr · 6.99% · fee 25%",
      "monthlyCents": 105916,
      "monthlyCreditsAppliedCents": 74142,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 10499533,
      "paydownCents": null,
      "postSolarMonthlyCents": 1345,
      "product": "loan",
      "programmeLabel": "25 yr · 6.99% · fee 25%",
      "quoted": false,
      "savings": {
        "netCents": -22789488,
        "paidCents": 31774800,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": -13257288,
        "paidCents": 22242600,
        "paybackYear": null,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 350,
      "totalCreditsAppliedCents": 14999333,
    },
  ],
  "projectContractValueCents": 29589429,
  "revenueReportCents": 29589429,
  "rowAfterGeneration": {
    "adderTotalCents": 0,
    "contractPriceCents": 29589429,
    "dealerFeePct": 65,
    "grossPpwCents": 550,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 700000,
    "stickerPricePerBatteryCents": 0,
  },
  "topLevel": {
    "finalCents": 29589429,
    "financedCents": 29589429,
    "netFinalCreditsAppliedCents": 10712600,
  },
}
`;

exports[`golden server sites: cash > derives the cached money columns (recomputeDealMoney, dealMoneyColumns) 1`] = `
{
  "columns": {
    "adderTotalCents": 150000,
    "contractPriceCents": 2630000,
    "dealerFeePct": 0,
    "grossPpwCents": 310,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 0,
    "stickerPricePerBatteryCents": 0,
  },
  "recompute": {
    "changed": true,
  },
  "rowAfterRecompute": {
    "adderTotalCents": 150000,
    "contractPriceCents": 2630000,
    "dealerFeePct": 0,
    "grossPpwCents": 310,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 0,
    "stickerPricePerBatteryCents": 0,
  },
}
`;

exports[`golden server sites: cash > estimates and pays the rep (estimatedSolarCommission, computeSolarCommissionsForProject) 1`] = `
{
  "created": 1,
  "estimate": {
    "basis": "redline",
    "fromSnapshot": false,
    "grossCents": 880000,
    "netCents": 880000,
    "state": "estimate",
  },
  "line": {
    "amount": 880000,
    "baseAmount": 2480000,
    "label": "Solar redline ($1.10/W over $2.00/W · 8,000 W)",
    "solarBasis": "redline",
    "solarGrossAmount": 880000,
  },
  "refusals": [],
}
`;

exports[`golden server sites: cash > generates the document and stamps what reads it (generateProposalVersion, restampLeadValue, solarContractByLead) 1`] = `
{
  "leadValueCents": 1791000,
  "options": [
    {
      "adderLinesFinal": [
        [
          "Critter guard",
          150000,
        ],
      ],
      "addersFinalCents": 150000,
      "baseFinalCents": 2480000,
      "creditAmountCents": 789000,
      "credits": [
        [
          "itc",
          30,
          789000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 2630000,
      "finalPpwCents": 329,
      "financedCents": 2630000,
      "financedCreditsAppliedCents": 1791000,
      "key": "cash",
      "label": "Pay in full",
      "monthlyCents": null,
      "monthlyCreditsAppliedCents": null,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 1791000,
      "paydownCents": null,
      "postSolarMonthlyCents": 2115,
      "product": "cash",
      "programmeLabel": null,
      "quoted": true,
      "savings": {
        "netCents": 2963725,
        "paidCents": 2630000,
        "paybackYear": 14,
      },
      "savingsCreditsApplied": {
        "netCents": 3802725,
        "paidCents": 2630000,
        "paybackYear": 11,
      },
      "signTodayCents": 50000,
      "stickerPpwCents": 310,
      "totalCreditsAppliedCents": 2630000,
    },
    {
      "adderLinesFinal": [
        [
          "Critter guard",
          428571,
        ],
      ],
      "addersFinalCents": 428571,
      "baseFinalCents": 2800000,
      "creditAmountCents": 968571,
      "credits": [
        [
          "itc",
          30,
          968571,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 3228571,
      "finalPpwCents": 404,
      "financedCents": 3228571,
      "financedCreditsAppliedCents": 2260000,
      "key": "loan:<id>",
      "label": "Capped Partner · 30 Year Solar",
      "monthlyCents": 8968,
      "monthlyCreditsAppliedCents": 6278,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 2260000,
      "paydownCents": null,
      "postSolarMonthlyCents": 2115,
      "product": "loan",
      "programmeLabel": "30 Year Solar",
      "quoted": false,
      "savings": {
        "netCents": 4056914,
        "paidCents": 3228480,
        "paybackYear": 1,
      },
      "savingsCreditsApplied": {
        "netCents": 5025314,
        "paidCents": 2260080,
        "paybackYear": 1,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 350,
      "totalCreditsAppliedCents": 3228571,
    },
    {
      "adderLinesFinal": [
        [
          "Critter guard",
          200000,
        ],
      ],
      "addersFinalCents": 200000,
      "baseFinalCents": 2800000,
      "creditAmountCents": 900000,
      "credits": [
        [
          "itc",
          30,
          900000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 3000000,
      "finalPpwCents": 375,
      "financedCents": 3000000,
      "financedCreditsAppliedCents": 2050000,
      "key": "loan:<id>",
      "label": "Example Lender · 25 yr · 6.99% · fee 25%",
      "monthlyCents": 21184,
      "monthlyCreditsAppliedCents": 14476,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 2050000,
      "paydownCents": null,
      "postSolarMonthlyCents": 2115,
      "product": "loan",
      "programmeLabel": "25 yr · 6.99% · fee 25%",
      "quoted": false,
      "savings": {
        "netCents": -761475,
        "paidCents": 6355200,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": 1250925,
        "paidCents": 4342800,
        "paybackYear": 9,
      },
      "signTodayCents": 50000,
      "stickerPpwCents": 350,
      "totalCreditsAppliedCents": 3000000,
    },
  ],
  "projectContractValueCents": 2630000,
  "revenueReportCents": 2630000,
  "rowAfterGeneration": {
    "adderTotalCents": 150000,
    "contractPriceCents": 2630000,
    "dealerFeePct": 0,
    "grossPpwCents": 310,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 0,
    "stickerPricePerBatteryCents": 0,
  },
  "topLevel": {
    "finalCents": 2630000,
    "financedCents": 2630000,
    "netFinalCreditsAppliedCents": 1791000,
  },
}
`;

exports[`golden server sites: storageOnly > derives the cached money columns (recomputeDealMoney, dealMoneyColumns) 1`] = `
{
  "columns": {
    "adderTotalCents": 0,
    "contractPriceCents": 4800000,
    "dealerFeePct": 50,
    "grossPpwCents": 0,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 0,
    "stickerPricePerBatteryCents": 2000000,
  },
  "recompute": {
    "changed": true,
  },
  "rowAfterRecompute": {
    "adderTotalCents": 0,
    "contractPriceCents": 4800000,
    "dealerFeePct": 50,
    "grossPpwCents": 0,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 0,
    "stickerPricePerBatteryCents": 2000000,
  },
}
`;

exports[`golden server sites: storageOnly > estimates and pays the rep (estimatedSolarCommission, computeSolarCommissionsForProject) 1`] = `
{
  "created": 1,
  "estimate": {
    "basis": "battery_flat",
    "fromSnapshot": false,
    "grossCents": 100000,
    "netCents": 100000,
    "state": "estimate",
  },
  "line": {
    "amount": 100000,
    "baseAmount": 2,
    "label": "Solar battery flat ($500/battery · 2 batteries)",
    "solarBasis": "battery_flat",
    "solarGrossAmount": 100000,
  },
  "refusals": [],
}
`;

exports[`golden server sites: storageOnly > generates the document and stamps what reads it (generateProposalVersion, restampLeadValue, solarContractByLead) 1`] = `
{
  "leadValueCents": 3360000,
  "options": [
    {
      "adderLinesFinal": [],
      "addersFinalCents": null,
      "baseFinalCents": 4800000,
      "creditAmountCents": 1440000,
      "credits": [
        [
          "itc",
          30,
          1440000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 4800000,
      "finalPpwCents": null,
      "financedCents": 4800000,
      "financedCreditsAppliedCents": 3360000,
      "key": "quoted:loan",
      "label": "Battery Partner · 20 Year Battery",
      "monthlyCents": 20000,
      "monthlyCreditsAppliedCents": 14000,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 3360000,
      "paydownCents": null,
      "postSolarMonthlyCents": 22017,
      "product": "loan",
      "programmeLabel": "20 Year Battery",
      "quoted": true,
      "savings": {
        "netCents": -5267397,
        "paidCents": 4800000,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": -3827397,
        "paidCents": 3360000,
        "paybackYear": null,
      },
      "signTodayCents": 0,
      "stickerPpwCents": null,
      "totalCreditsAppliedCents": 4800000,
    },
    {
      "adderLinesFinal": [],
      "addersFinalCents": null,
      "baseFinalCents": 2400000,
      "creditAmountCents": 720000,
      "credits": [
        [
          "itc",
          30,
          720000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 2400000,
      "finalPpwCents": null,
      "financedCents": 2400000,
      "financedCreditsAppliedCents": 1680000,
      "key": "cash",
      "label": "Pay in full",
      "monthlyCents": null,
      "monthlyCreditsAppliedCents": null,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 1680000,
      "paydownCents": null,
      "postSolarMonthlyCents": 22017,
      "product": "cash",
      "programmeLabel": null,
      "quoted": false,
      "savings": {
        "netCents": -2867397,
        "paidCents": 2400000,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": -2147397,
        "paidCents": 2400000,
        "paybackYear": null,
      },
      "signTodayCents": 0,
      "stickerPpwCents": null,
      "totalCreditsAppliedCents": 2400000,
    },
  ],
  "projectContractValueCents": 4800000,
  "revenueReportCents": 4800000,
  "rowAfterGeneration": {
    "adderTotalCents": 0,
    "contractPriceCents": 4800000,
    "dealerFeePct": 50,
    "grossPpwCents": 0,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 0,
    "stickerPricePerBatteryCents": 2400000,
  },
  "topLevel": {
    "finalCents": 4800000,
    "financedCents": 4800000,
    "netFinalCreditsAppliedCents": 3360000,
  },
}
`;

exports[`golden server sites: the production floor on the capped partner > records what generation does with Amos's $2.00/W floor at the stored 65% fee 1`] = `
{
  "error": "Fix the blocking issues before generating.",
  "issues": [
    "config.min_offset_unset",
    "pricing.below_lender_floor",
  ],
  "ok": false,
}
`;

exports[`golden server sites: workedExample > derives the cached money columns (recomputeDealMoney, dealMoneyColumns) 1`] = `
{
  "columns": {
    "adderTotalCents": 370000,
    "contractPriceCents": 6493333,
    "dealerFeePct": 25,
    "grossPpwCents": 400,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 0,
    "stickerPricePerBatteryCents": 0,
  },
  "recompute": {
    "changed": true,
  },
  "rowAfterRecompute": {
    "adderTotalCents": 370000,
    "contractPriceCents": 6493333,
    "dealerFeePct": 25,
    "grossPpwCents": 400,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 0,
    "stickerPricePerBatteryCents": 0,
  },
}
`;

exports[`golden server sites: workedExample > estimates and pays the rep (estimatedSolarCommission, computeSolarCommissionsForProject) 1`] = `
{
  "created": 1,
  "estimate": {
    "basis": "redline",
    "fromSnapshot": false,
    "grossCents": 1000000,
    "netCents": 1000000,
    "state": "estimate",
  },
  "line": {
    "amount": 1000000,
    "baseAmount": 3000000,
    "label": "Solar redline ($1.00/W over $2.00/W · 10,000 W)",
    "solarBasis": "redline",
    "solarGrossAmount": 1000000,
  },
  "refusals": [],
}
`;

exports[`golden server sites: workedExample > generates the document and stamps what reads it (generateProposalVersion, restampLeadValue, solarContractByLead) 1`] = `
{
  "leadValueCents": 4545333,
  "options": [
    {
      "adderLinesFinal": [
        [
          "Main panel upgrade",
          360000,
        ],
        [
          "Steep roof",
          133333,
        ],
      ],
      "addersFinalCents": 493333,
      "baseFinalCents": 4000000,
      "creditAmountCents": 1948000,
      "credits": [
        [
          "itc",
          30,
          1948000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 2000000,
      "finalCents": 6493333,
      "finalPpwCents": 649,
      "financedCents": 6493333,
      "financedCreditsAppliedCents": 4545333,
      "key": "quoted:loan",
      "label": "Example Lender · 25 yr · 6.99% · fee 25%",
      "monthlyCents": 45852,
      "monthlyCreditsAppliedCents": 32096,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 4545333,
      "paydownCents": null,
      "postSolarMonthlyCents": 1644,
      "product": "loan",
      "programmeLabel": "25 yr · 6.99% · fee 25%",
      "quoted": true,
      "savings": {
        "netCents": -6646757,
        "paidCents": 13755600,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": -2519957,
        "paidCents": 9628800,
        "paybackYear": null,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 400,
      "totalCreditsAppliedCents": 6493333,
    },
    {
      "adderLinesFinal": [
        [
          "Main panel upgrade",
          270000,
        ],
        [
          "Steep roof",
          100000,
        ],
      ],
      "addersFinalCents": 370000,
      "baseFinalCents": 3000000,
      "creditAmountCents": 1461000,
      "credits": [
        [
          "itc",
          30,
          1461000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 1500000,
      "finalCents": 4870000,
      "finalPpwCents": 487,
      "financedCents": 4870000,
      "financedCreditsAppliedCents": 3409000,
      "key": "cash",
      "label": "Pay in full",
      "monthlyCents": null,
      "monthlyCreditsAppliedCents": null,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 3409000,
      "paydownCents": null,
      "postSolarMonthlyCents": 1644,
      "product": "cash",
      "programmeLabel": null,
      "quoted": false,
      "savings": {
        "netCents": 2238843,
        "paidCents": 4870000,
        "paybackYear": 19,
      },
      "savingsCreditsApplied": {
        "netCents": 3699843,
        "paidCents": 4870000,
        "paybackYear": 15,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 300,
      "totalCreditsAppliedCents": 4870000,
    },
    {
      "adderLinesFinal": [
        [
          "Main panel upgrade",
          771429,
        ],
        [
          "Steep roof",
          285714,
        ],
      ],
      "addersFinalCents": 1057143,
      "baseFinalCents": 3500000,
      "creditAmountCents": 2652857,
      "credits": [
        [
          "itc",
          30,
          2652857,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 4285714,
      "finalCents": 8842857,
      "finalPpwCents": 884,
      "financedCents": 8842857,
      "financedCreditsAppliedCents": 6190000,
      "key": "loan:<id>",
      "label": "Capped Partner · 30 Year Solar",
      "monthlyCents": 24563,
      "monthlyCreditsAppliedCents": 17194,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 6190000,
      "paydownCents": null,
      "postSolarMonthlyCents": 1644,
      "product": "loan",
      "programmeLabel": "30 Year Solar",
      "quoted": false,
      "savings": {
        "netCents": 418715,
        "paidCents": 8842680,
        "paybackYear": 28,
      },
      "savingsCreditsApplied": {
        "netCents": 3071555,
        "paidCents": 6189840,
        "paybackYear": 5,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 350,
      "totalCreditsAppliedCents": 8842857,
    },
  ],
  "projectContractValueCents": 6493333,
  "revenueReportCents": 6493333,
  "rowAfterGeneration": {
    "adderTotalCents": 370000,
    "contractPriceCents": 6493333,
    "dealerFeePct": 25,
    "grossPpwCents": 400,
    "itcEstimateCents": 0,
    "onTopAdderTotalCents": 0,
    "stickerPricePerBatteryCents": 0,
  },
  "topLevel": {
    "finalCents": 6493333,
    "financedCents": 6493333,
    "netFinalCreditsAppliedCents": 4545333,
  },
}
`;
